testdata/golden/sema/invalid/tuple_arity.fmt
// scenario: tuple arity mismatch
fn bad_length() -> (int, int, int) {
    return (1, 2);
}
